--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,6 @@
 .gradient-background {
-  background: linear-gradient(
-    205deg,
+  background: radial-gradient(
+    circle,
     #d65177,
     #dadee7,
     #8a95e8,
@@ -15,12 +15,18 @@
 
 @keyframes gradient-animation {
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 0%;
+  }
+  25% {
+    background-position: 25% 75%;
   }
   50% {
-    background-position: 100% 50%;
+    background-position: 50% 25%;
+  }
+  75% {
+    background-position: 75% 50%;
   }
   100% {
-    background-position: 0% 50%;
+    background-position: 100% 100%;
   }
 }
